fix footer logo overflow

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -16,7 +16,7 @@
 }
 
 .logo-svg {
-  width: 600px;
+  max-width: 230px;
   margin-top: 20px;
 }
 
